@@ -6,6 +6,8 @@ For users upgrading from 0.5.1 to 0.6
 templates/movie.tpl has been removed and replaced by
 templates/file.tpl
 
+Remember to update templates/picture.tpl
+
 htdocs/video-wmv.png
 htdocs/application-doc.png
 htdocs/application-mp3.png
